--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-server-core": "^3.10.1",
     "apollo-server-micro": "^3.9.0",
     "axios": "^0.26.1",
+    "chart.js": "^4.3.0",
     "dotenv": "^16.0.0",
     "graphql": "^15.3.0",
     "js-cookie": "^3.0.1",
@@ -30,6 +31,7 @@
     "mongoose": "^6.4.0",
     "next": "12.1.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "spotify-web-api-node": "^5.0.2",
     "uuid": "^8.3.2",
