--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "11.6.0",
     "@types/extract-colors": "^1.1.0",
     "@types/micro-cors": "^0.1.2",
+    "@whil/ui": "^0.0.2",
     "apollo-server-core": "^3.10.1",
     "apollo-server-micro": "^3.9.0",
     "axios": "^0.26.1",
@@ -29,7 +30,7 @@
     "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
     "mongoose": "^6.4.0",
-    "next": "12.1.6",
+    "next": "13.1.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
